--- a/microton/src/components/Button/Buttons.scss
+++ b/microton/src/components/Button/Buttons.scss
@@ -14,4 +14,10 @@
     &:hover {
         background-color: var(--accent);
     }
+
+    &:disabled {
+        cursor: no-drop;
+        pointer-events: none;
+        opacity: 0.2;
+    }
 }
