--- a/microton/src/components/RecipesItem/RecipesItem.scss
+++ b/microton/src/components/RecipesItem/RecipesItem.scss
@@ -6,6 +6,29 @@
     display: grid;
     grid-template-columns: 200px 1fr 80px;
 
+    &.--add {
+        height: 160px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__add {
+        border-radius: 20px;
+        border: 1px solid var(--accent);
+        padding: 20px 30px;
+        background-color: transparent;
+        color: #fff;
+        cursor: pointer;
+        transition-duration: .2s;
+        font-weight: 700;
+
+        &:hover {
+            background-color: var(--accent);
+            color: var(--bg0);
+        }
+    }
+
     &__info {
         padding: 20px 20px 32px 20px;
         display: flex;
